public/styles/nav.css
nav {
  height: 85px;
  width: 100%;
  background-color: #4056a1;
  color: #ffffff;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: fixed;
  padding: 0 1.5em;
  z-index: 1;
}

.logo {
  font-family: "Bungee", sans-serif;
  font-size: 38px;
  display: flex;
  align-items: center;
}

.icon-container {
  margin-left: 50px;
  position: relative;
  bottom: 0;
  padding-left: 50px;
}

.write-tweet > * {
  flex: 1;
  margin-bottom: 8px;
  margin-top: -0px;
  margin-right: 1.5em;
}

.fa-solid.fa-crow {
  padding-left: 1.5em;
  font-size: 24px;
  margin-right: 4px;
  animation: headshake 2s infinite;
}

@keyframes headshake {
  0% {
    transform: rotate(0);
  }
  10% {
    transform: rotate(-2deg);
  }
  20% {
    transform: rotate(6deg);
  }
  30% {
    transform: rotate(-1deg);
  }
  40% {
    transform: rotate(1deg);
  }
  50% {
    transform: rotate(0);
  }
  100% {
    transform: rotate(0);
  }
}

.mySignature {
  color: black;
  font-size: 12px;
  vertical-align: middle;
  margin-left: 5px;
}

.compose-button {
  padding: 10px 20px;
  background-color: #4056a1;
  color: #ffffff;
  border: none;
  border-radius: 5px;
  cursor: default;
  margin-bottom: 0px;
  margin-top: 10px;
  margin-right: 1.5em;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  flex-shrink: 0;
  overflow: hidden;
}

.compose-button span {
  font-family: "Source Sans 3", sans-serif;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.compose-button:hover {
  background-color: #4056a1;
  color: #ffffff;
}

.move-right {
  margin-top: 5px;
}

/* For mobile phones: */
@media only screen and (max-width: 768px) {
  .icon-container {
    margin-left: 50px;
  }
  .write-tweet {
    flex-direction: column; /* Stack elements vertically */
    align-items: center; /* Center align the elements */
  }
  .compose-button {
    margin-top: 10px; /* Add a bit of space between elements */
  }
}

/* For extra small devices: */
@media only screen and (max-width: 574px) {
  .nav {
    height: 70px; /* Make the nav bar smaller */
    padding: 0 1em; /* Reduce padding */
  }
  .logo {
    font-size: 28px; /* Make the logo smaller */
  }
  .icon-container {
    margin-left: 20px; /* Reduce margin left */
  }
  .write-tweet > * {
    margin-bottom: 5px;
    margin-top: 0;
    margin-right: 1em;
  }
  .compose-button {
    padding: 5px 10px; /* Make the button smaller */
    font-size: 14px; /* Make the button text smaller */
  }
}

